--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Document</title>
- <style></style>
+ <style>
+  #her{
+   color: red;
+  }
+  .hers{
+   color: green;
+  }
+ </style>
 </head>
 <body>
  <nav>
@@ -17,8 +24,8 @@
   <article>
    <section>
     <div id="her">id 1</div>
-    <div>id 2</div>
-    <div>id 3</div>
+    <div class="hers">id 2</div>
+    <div class="hers">id 3</div>
    </section>
    <section>Section 2</section>
    <section>Section 3</section>
