--- a/index.html
+++ b/index.html
@@ -6,27 +6,15 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Document</title>
  <link rel="stylesheet" href="./style.css">
+ <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
- <nav>
-  <div>Home</div>
-  <div>About Us</div>
- </nav>
-
  <main>
   <article>
-   <section>
-    <div id="her">id 1</div>
-    <div class="hers">id 2</div>
-    <div class="hers">id 3</div>
+   <section class="grid grid-cols-4 gap-4">
+
    </section>
-   <section>Section 2</section>
-   <section>Section 3</section>
   </article>
  </main>
-
- <footer>
-  <div>This is the footer</div>
- </footer>
 </body>
 </html>
