Added new images

--- a/index.html
+++ b/index.html
@@ -12,6 +12,21 @@
  <main>
   <article>
    <section class="grid grid-cols-4 gap-4">
+    <div>
+     <img src="./images/image1.jpg" alt="Pancakes">
+    </div>
+    <div>
+     <img src="./images/image2.jpg" alt="Pasta">
+    </div>
+    <div>
+     <img src="./images/image3.jpg" alt="Baking cheese">
+    </div>
+    <div>
+     <img src="./images/image4.jpg" alt="Macarons">
+    </div>
+    <div>
+     <img src="./images/image5.jpg" alt="Slice Cake">
+    </div>
 
    </section>
   </article>
