--- a/index.html
+++ b/index.html
@@ -11,22 +11,31 @@
 <body>
  <main>
   <article>
-   <section class="grid grid-cols-4 gap-4">
-    <div>
-     <img src="./images/image1.jpg" alt="Pancakes">
+   <section class="min-h-screen flex items-center mx-4">
+    <div class="grid grid-cols-4 gap-4">
+     <div>
+      <img src="./images/image1.jpg" alt="Pancakes">
+      <p class="imagename" id="image1">Pancake with honey</p>
+     </div>
+     <div>
+      <img src="./images/image2.jpg" alt="Pasta">
+      <p class="imagename">Pasta with tomato and basil</p>
+     </div>
+     <div>
+      <img src="./images/image3.jpg" alt="Baking cheese">
+      <p class="imagename">Baking cheese Cooking Crust</p>
+     </div>
+     <div>
+      <img src="./images/image4.jpg" alt="Macarons">
+      <p class="imagename">French Macarons</p>
+     </div>
+     <div>
+      <img src="./images/image5.jpg" alt="Slice Cake">
+      <p class="imagename">Slice cake</p>
+     </div>
+
     </div>
-    <div>
-     <img src="./images/image2.jpg" alt="Pasta">
-    </div>
-    <div>
-     <img src="./images/image3.jpg" alt="Baking cheese">
-    </div>
-    <div>
-     <img src="./images/image4.jpg" alt="Macarons">
-    </div>
-    <div>
-     <img src="./images/image5.jpg" alt="Slice Cake">
-    </div>
+    
 
    </section>
   </article>
