--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 <body>
  <main>
   <article>
+   <section>
+    <div>
+     <h3 id="topic">My Pictures Gallery</h3>
+    </div>
+   </section>
    <section class="min-h-screen flex items-center mx-4">
     <div class="grid grid-cols-4 gap-4">
      <div>
@@ -32,6 +37,18 @@
      <div>
       <img src="./images/image5.jpg" alt="Slice Cake">
       <p class="imagename">Slice cake</p>
+     </div>
+     <div>
+      <img src="./images/image6.jpg" alt="French fries">
+      <p class="imagename">French fries with dipping sauce</p>
+     </div>
+     <div>
+      <img src="./images/image7.jpg" alt="Red apple">
+      <p class="imagename">Red Apple</p>
+     </div>
+     <div>
+      <img src="./images/image8.jpg" alt="Potatoes">
+      <p class="imagename">Potatoes</p>
      </div>
 
     </div>
