--- a/index.html
+++ b/index.html
@@ -24,31 +24,31 @@
      </div>
      <div>
       <img src="./images/image2.jpg" alt="Pasta">
-      <p class="imagename">Pasta with tomato and basil</p>
+      <p class="imagename" id="image2">Pasta with tomato and basil</p>
      </div>
      <div>
       <img src="./images/image3.jpg" alt="Baking cheese">
-      <p class="imagename">Baking cheese Cooking Crust</p>
+      <p class="imagename" id="image3">Baking cheese Cooking Crust</p>
      </div>
      <div>
       <img src="./images/image4.jpg" alt="Macarons">
-      <p class="imagename">French Macarons</p>
+      <p class="imagename" id="image4">French Macarons</p>
      </div>
      <div>
       <img src="./images/image5.jpg" alt="Slice Cake">
-      <p class="imagename">Slice cake</p>
+      <p class="imagename" id="image5">Slice cake</p>
      </div>
      <div>
       <img src="./images/image6.jpg" alt="French fries">
-      <p class="imagename">French fries with dipping sauce</p>
+      <p class="imagename" id="image6">French fries with dipping sauce</p>
      </div>
      <div>
       <img src="./images/image7.jpg" alt="Red apple">
-      <p class="imagename">Red Apple</p>
+      <p class="imagename" id="image7">Red Apple</p>
      </div>
      <div>
       <img src="./images/image8.jpg" alt="Potatoes">
-      <p class="imagename">Potatoes</p>
+      <p class="imagename" id="image8">Potatoes</p>
      </div>
 
     </div>
@@ -59,6 +59,6 @@
  </main>
 
  <script src="./script.js"></script>
- 
+
 </body>
 </html>
