--- a/tailwind/index.html
+++ b/tailwind/index.html
@@ -8,7 +8,9 @@
  <title>Document</title>
 </head>
 <body>
- <h1>Hello World!</h1>
+ <div class="w-24 h-24 bg-red-400 ml-10 mt-10 underline z-30">
+  <h1 class="text-white font-bold text-3xl">Hello World!</h1>
+ </div>
  
 </body>
 </html>
