--- a/Second Test/index.html
+++ b/Second Test/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rozha+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css" />
     <title>CITY NEWS</title>
   </head>
@@ -11,42 +14,44 @@
     <header>
       <div>
         <div id="Headline">
-          <p id="city">Classic city newspaper template</p>
-          <p>Monday, September 13, Issue</p>
+          <p id="city"><strong>Classic city newspaper template</strong></p>
+          <p><strong>Monday, September 13, Issue</strong></p>
         </div>
 
         <hr />
-        <h1 class="heading">CITY NEWS</h1>
-        <h2 class="heading">THE CLASSIC NEWSPAPER TEMPLATE</h2>
+        <div id="header">
+          <div id="big-text">
+            <h1>CITY</h1>
+            <h1>NEWS</h1>
+          </div>
+          <div id="small-text">
+            <h3>THE</h3>
+            <h3>CLASSIC</h3>
+            <h3>NEWSPAPER</h3>
+            <h3>TEMPLATE</h3>
+          </div>
+          
+        </div>
+      </div>
+        <!-- -->
         <hr />
       </div>
       <main>
         <section class="flex-container">
           <!-- Div for the left column -->
           <div class="left">
-            <p>
+            <p id="one">
               <strong><em>"At vero eos et accusamus et iusto odio nes dignissimos."</em></strong>
             </p>
             <p>
-              Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-              accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
-              quae ab illo inventore veritatis et quasi architecto beatae vitae
-              dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
-              aspernatur aut odit aut fugit, sed quia consequuntur magni dolores
-              eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam
-              est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
-              velit, sed quia non numquam eius modi tempora incidunt ut labore
+              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores
+              eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore
               et dolore magnam aliquam quaerat voluptatem.
             </p>
-            <p><strong><em>"At vero eos et accusamus et iusto odio nes dignissimos."</em></strong></p>
-            <p id="last">
-              Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-              accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
-              quae ab illo inventore veritatis et quasi architecto beatae vitae
-              dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
-              aspernatur aut odit aut fugit, sed quia consequuntur magni dolores
-              eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam
-              est, qui dolorem ipsum quia dolor sit amet, consectetur.
+            <p id="two"><strong><em>"At vero eos et accusamus et iusto odio nes dignissimos."</em></strong></p>
+            <p>
+              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores
+              eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur.
             </p>
           </div>
           <!-- div for the right column -->
@@ -56,13 +61,11 @@
             <p><strong><em>"At vero eos et accusamus et iusto odio nes dignissimos."</em></strong></p>
             <div class="flex-container">
               <p class="left">
-                Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-                accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
+                Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
                 quae
               </p>
               <p class="right">
-                Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-                accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
+                Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
                 quae
               </p>
             </div>
