--- a/Second Test/index.html
+++ b/Second Test/index.html
@@ -40,15 +40,15 @@
         <section class="flex-container">
           <!-- Div for the left column -->
           <div class="left">
-            <p id="one">
-              <strong><em>"At vero eos et accusamus et iusto odio nes dignissimos."</em></strong>
+            <p>
+              <strong><em style="font-size: 30px;">"At vero eos et accusamus et iusto odio nes dignissimos."</em></strong>
             </p>
             <p>
               Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores
               eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore
               et dolore magnam aliquam quaerat voluptatem.
             </p>
-            <p id="two"><strong><em>"At vero eos et accusamus et iusto odio nes dignissimos."</em></strong></p>
+            <p ><strong><em style="font-size: 20px;">"At vero eos et accusamus et iusto odio nes dignissimos."</em></strong></p>
             <p>
               Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores
               eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur.
@@ -58,7 +58,7 @@
           <div class="right">
             <!-- for the image -->
             <div id="image"></div>
-            <p><strong><em>"At vero eos et accusamus et iusto odio nes dignissimos."</em></strong></p>
+            <p><strong><em style="font-size: 20px;">"At vero eos et accusamus et iusto odio nes dignissimos."</em></strong></p>
             <div class="flex-container">
               <p class="left">
                 Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
